--- a/index.ipynb
+++ b/index.ipynb
@@ -1718,25 +1718,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-83158df8c9f0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Keep tinkering!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplay_star_rating\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "5.0    2219\n",
+       "4.5    1136\n",
+       "4.7     840\n",
+       "4.0     816\n",
+       "4.3     793\n",
+       "4.6     685\n",
+       "4.4     566\n",
+       "4.8     504\n",
+       "4.2     467\n",
+       "4.1     320\n",
+       "3.9     281\n",
+       "3.6     213\n",
+       "4.9     204\n",
+       "3.5     204\n",
+       "3.0     202\n",
+       "3.2     192\n",
+       "3.7     186\n",
+       "3.8     148\n",
+       "2.0     126\n",
+       "3.3     120\n",
+       "2.7      64\n",
+       "1.0      42\n",
+       "2.2      42\n",
+       "2.5      42\n",
+       "3.4      25\n",
+       "2.9      21\n",
+       "2.3      20\n",
+       "3.1       4\n",
+       "2.8       2\n",
+       "2.1       2\n",
+       "Name: play_star_rating, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#Keep tinkering!\n",
     "df.play_star_rating.value_counts()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
