Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1772,7 +1772,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Keep tinkering!\n",
+    "df.play_star_rating.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
