Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1735,7 +1735,7 @@
    ],
    "source": [
     "#Keep tinkering!\n",
-    "df[play_star_rating].value_counts()"
+    "df['play_star_rating].value_counts()"
    ]
   },
   {
