--- a/index.ipynb
+++ b/index.ipynb
@@ -1843,16 +1843,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f68dfa1e0b8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f68df9ebdd8>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1870,7 +1870,7 @@
     }
    ],
    "source": [
-    "to_graph = df['theme_name.value_counts()[:5]\n",
+    "to_graph = df['theme_name'].value_counts()[:5]\n",
     "to_graph.plot(kind='barh')"
    ]
   },
